Cambios de menu

--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Menu/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Menu/Anular.cshtml
@@ -5,6 +5,7 @@
     {
         Response.Redirect("~/Account/Login");
     }
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @using (Html.BeginForm("Anular", "Menu", FormMethod.Post, new { @role = "form", @class = "form" }))
@@ -47,6 +48,21 @@
             <div class="col-md-4">
                 <div class="checkbox">
                     <label for="Tiene_FormularioAsociado">Tiene formulario asociado @Html.CheckBoxFor(q => q.Tiene_FormularioAsociado)</label>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-4">
+                <div class="checkbox">
+                    <label for="es_web">@Html.CheckBoxFor(q => q.es_web) Aparece en sistema web</label>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="checkbox">
+                    <label for="es_desktop">@Html.CheckBoxFor(q => q.es_desktop) Aparece en sistema desktop</label>
                 </div>
             </div>
         </div>
