--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Menu/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Menu/Index.cshtml
@@ -5,9 +5,16 @@
     {
         Response.Redirect("~/Account/Login");
     }
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @using (Html.BeginForm())
 {
+    <div class="row">
+            <div class="col-md-12">
+                <a class="btn btn-primary" href="@Url.Action("Nuevo","Menu",new { Area = "SeguridadAcceso" },null)">Nuevo</a>
+            </div>    
+    </div>
+
     @Html.Action("TreeListPartial_menu")
 }
