--- a/ERP/Core.Erp.Web/Areas/General/Views/Pais/_GridViewPartial_pais.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Pais/_GridViewPartial_pais.cshtml
@@ -78,11 +78,26 @@
         });
 
 
-        settings.Columns.Add("IdPais", "ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("CodPais", "Codigo").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdPais", "ID").Width = Unit.Percentage(5);
+        settings.Columns.Add("CodPais", "Codigo").Width = Unit.Percentage(5);
         settings.Columns.Add("Nombre", "Nombre").Width = Unit.Percentage(35);
         settings.Columns.Add("Nacionalidad", "Nacionalidad").Width = Unit.Percentage(35);
         settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(10);
+
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "Bodegas";
+            column.Width = Unit.Pixel(100);
+            column.SetDataItemTemplateContent(container =>
+            {
+                Html.DevExpress().HyperLink(hyperlink =>
+                {
+                    var keyValue = DataBinder.Eval(container.DataItem, "IdPais");
+                    hyperlink.Properties.Text = "Provincias";
+                    hyperlink.NavigateUrl = Url.Action("Index", "Provincia", new { IdPais = keyValue });
+                }).Render();
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
