--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Menu/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Menu/Nuevo.cshtml
@@ -5,6 +5,7 @@
     {
         Response.Redirect("~/Account/Login");
     }
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @using (Html.BeginForm("Nuevo", "Menu", FormMethod.Post, new { @role = "form", @class = "form" }))
@@ -43,9 +44,17 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="checkbox">
-                    <label for="Tiene_FormularioAsociado">@Html.CheckBoxFor(q => q.Tiene_FormularioAsociado) Tiene formulario asociado</label>
-                </div>
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label for="Tiene_FormularioAsociado">@Html.CheckBoxFor(q => q.Tiene_FormularioAsociado) Tiene formulario asociado</label>
+                    </div>
+                    <div class="checkbox">
+                        <label for="es_desktop">@Html.CheckBoxFor(q => q.es_desktop) Aparece en sistema desktop</label>
+                    </div>
+                    <div class="checkbox">
+                        <label for="es_web">@Html.CheckBoxFor(q => q.es_web) Aparece en sistema web</label>
+                    </div>
+                </div>                
             </div>
         </div>
     </div>
