--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Modificar.cshtml
@@ -383,6 +383,7 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+
 <script>
         $(function () {
             get_info_clase_proveedor();
@@ -396,20 +397,116 @@
     $("#pe_razonSocial").keyup(function () {
         actualizar_nombre_completo();
     });
+    $("#pe_cedulaRuc").change(function () {
+        get_info_x_num_cedula();
+    });
 
-      function actualizar_nombre_completo() {
-        var apellido = $("#pe_apellido").val();
-        var nombre = $("#pe_nombre").val();
-        var razon_social = $("#pe_razonSocial").val();
+    $("#pe_cedulaRuc").keyup(function () {
+        var tipo_doc = $("#IdTipoDocumento").val();
+        var cedula = $("#pe_cedulaRuc").val();
 
-        if (razon_social == "") {
-            var nombre_completo = apellido + ' ' + nombre;
-            $("#pe_nombreCompleto").val(nombre_completo)
-        } else {
-            $("#pe_nombreCompleto").val(razon_social)
+        if (tipo_doc == "RUC") {
+            if (cedula.length > 13) {
+                var len = $("#pe_cedulaRuc").val();
+                len = len.substring(0, 13);
+                $("#pe_cedulaRuc").val(len);
+            }
+
         }
-    }
+        else
+            if (tipo_doc == "CED") {
+                if (cedula.length > 10) {
+                    var len = $("#pe_cedulaRuc").val();
+                    len = len.substring(0,10);
+                    $("#pe_cedulaRuc").val(len);
+                }
+            }
+    });
 
+        function actualizar_nombre_completo() {
+            var apellido = $("#pe_apellido").val();
+            var nombre = $("#pe_nombre").val();
+            var razon_social = $("#pe_razonSocial").val();
+
+            if (razon_social == "") {
+                var nombre_completo = apellido + ' ' + nombre;
+                $("#pe_nombreCompleto").val(nombre_completo)
+            } else {
+                $("#pe_nombreCompleto").val(razon_social)
+            }
+        }
+
+    function get_info_x_num_cedula() {
+        var cedula = $("#pe_cedulaRuc").val();
+        var tipo_doc = $("#IdTipoDocumento").val();
+
+        if (cedula == null) {
+            vaciar_campos_persona();
+            return;
+        }
+
+        if (tipo_doc == "RUC") {
+            if (cedula.length != 13) {
+                alert("El documento de tipo RUC, debe tener una longitud de 13 caracteres");
+
+                $("#pe_cedulaRuc").val("");
+                vaciar_campos_persona();
+                return;
+            }
+        } else
+            if (tipo_doc == "CED") {
+                if (cedula.length != 10) {
+                    alert("El documento de tipo cédula, debe tener una longitud de 10 caracteres");
+                    $("#pe_cedulaRuc").val("");
+                    vaciar_campos_persona();
+                    return;
+                }
+            }
+
+        var datos = {
+            pe_cedulaRuc: cedula
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("get_info_x_num_cedula", "Proveedor",new { Area = "CuentasPorPagar"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data == "") {
+                    return;
+                }
+
+                if (data.IdProveedor != 0) {
+                    alert("El proveedor ya existe con el ID: " + data.IdProveedor);
+                    window.location.href = '@Url.Action("Index", "Proveedor", new { Area = "CuentasPorPagar" })'
+                }
+                else
+                {
+                    if (data.IdPersona != 0 && data.IdCliente == 0) {
+                        $("#pe_nombre").val(data.info_persona.pe_nombre);
+                        $("#pe_apellido").val(data.info_persona.pe_apellido);
+                        $("#pe_nombreCompleto").val(data.info_persona.pe_nombreCompleto);
+                        $("#pe_razonSocial").val(data.info_persona.pe_razonSocial);
+
+                        $("#pr_correo").val(data.info_persona.pe_correo);
+                        $("#pr_celular").val(data.info_persona.pe_celular);
+                        $("#pr_telefonos").val(data.info_persona.pe_telfono_Contacto);
+                        $("#pr_direccion").val(data.info_persona.pe_direccion);
+
+                        $("#IdPersona").val(data.IdPersona);
+                    }
+                    else {
+                        vaciar_campos_persona();
+                    }
+                }
+            },
+            error: function (error) {
+                alert(error);
+            }
+        });
+    }
 
     function vaciar_campos_persona() {
         $("#pe_nombre").val("");
@@ -424,7 +521,7 @@
     }
 
         function get_info_clase_proveedor() {
-        var tipo = IdClaseProveedor.GetValue();
+            var clase = $("#IdClaseProveedor").val();
 
         if (clase != null) {
             var datos = {
@@ -441,9 +538,9 @@
                     if (data.length == 0) {
                         console.log("NO DATA!")
                     } else {
-                        IdCtaCble_cxc.SetValue(data.IdCtaCble_CXC_Con);
-                        IdCtaCble_cxc_Credito.SetValue(data.IdCtaCble_CXC_Cred);
-                        IdCtaCble_Anti.SetValue(data.IdCtaCble_CXC_Anticipo);
+                        IdCtaCble_CXP.SetValue(data.IdCtaCble_CXP);
+                        IdCtaCble_Gasto.SetValue(data.IdCtaCble_Gasto);
+                        IdCtaCble_Anticipo.SetValue(data.IdCtaCble_CXC_Anticipo);
                     }
                 },
                 error: function (error) {
@@ -451,9 +548,13 @@
                 }
             });
         } else {
-            IdCtaCble_cxc.SetValue(null);
-            IdCtaCble_cxc_Credito.SetValue(null);
-            IdCtaCble_Anti.SetValue(null);
+            IdCtaCble_CXP.SetValue(null);
+            IdCtaCble_Gasto.SetValue(null);
+            IdCtaCble_Anticipo.SetValue(null);
         }
-    }
-    </script>
+        }
+
+
+
+
+</script>
