--- a/ERP/Core.Erp.Web/Areas/General/Views/Region/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Region/Index.cshtml
@@ -11,6 +11,10 @@
 @using (Html.BeginForm())
 {
 
-    @Html.Action("GridViewPartial_region")
+    @Html.Action("GridViewPartial_region", new { IdPais = ViewBag.IdPais })
+
+    <div class="box-footer">
+        <a class="btn btn-default" href="@Url.Action("Index","Pais",new { IdPais = ViewBag.IdPais, Area = "General" },null)">Volver</a>
+    </div>
 
 }
