--- a/ERP/Core.Erp.Web/Areas/General/Views/Region/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Region/Nuevo.cshtml
@@ -8,15 +8,26 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm("Nuevo","Region",FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Nuevo", "Region", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+<div class="row">
+    <div class="col-md-12">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label for="IdPais">País</label>
+                @Html.DropDownListFor(q => q.IdPais, new SelectList(ViewBag.lst_pais, "IdPais", "Nombre"), new { @class = "form-control" })
+                @Html.ValidationMessageFor(q => q.IdPais, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+</div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="codigo">Código</label>
                     @Html.TextBoxFor(m => m.codigo, new { @class = "form-control" })
-                </div>                
+                </div>
             </div>
         </div>
     </div>
@@ -26,7 +37,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="Nom_region">Región*</label>
-                    @Html.TextBoxFor(m=>m.Nom_region, new { @class = "form-control"})
+                    @Html.TextBoxFor(m => m.Nom_region, new { @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.Nom_region, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -35,9 +46,9 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Region",new { Area = "General" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Region", new {IdPais = Model.IdPais, Area = "General" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
-}
+    }
