--- a/ERP/Core.Erp.Web/Areas/General/Views/Pais/_GridViewPartial_pais.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Pais/_GridViewPartial_pais.cshtml
@@ -86,7 +86,21 @@
 
         settings.Columns.Add(column =>
         {
-            column.Caption = "Bodegas";
+            column.Caption = "Región";
+            column.Width = Unit.Pixel(100);
+            column.SetDataItemTemplateContent(container =>
+            {
+                Html.DevExpress().HyperLink(hyperlink =>
+                {
+                    var keyValue = DataBinder.Eval(container.DataItem, "IdPais");
+                    hyperlink.Properties.Text = "Región";
+                    hyperlink.NavigateUrl = Url.Action("Index", "Region", new { IdPais = keyValue });
+                }).Render();
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "Provincia";
             column.Width = Unit.Pixel(100);
             column.SetDataItemTemplateContent(container =>
             {
@@ -98,6 +112,7 @@
                 }).Render();
             });
         });
+
     });
 }
 @grid.Bind(Model).GetHtml()
