--- a/ERP/Core.Erp.Web/Areas/General/Views/Region/_GridViewPartial_region.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Region/_GridViewPartial_region.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_region";
-        settings.CallbackRouteValues = new { Controller = "Region", Action = "GridViewPartial_region" };
+        settings.CallbackRouteValues = new { Controller = "Region", Action = "GridViewPartial_region", IdPais = ViewBag.IdPais };
         settings.KeyFieldName = "Cod_Region";
         settings.Width = Unit.Percentage(100);
 
@@ -59,8 +59,8 @@
                 if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "estado")) == true)
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { codRegion = DataBinder.Eval(tc.DataItem, "Cod_Region") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { codRegion = DataBinder.Eval(tc.DataItem, "Cod_Region") },
+                Html.ActionLink("Modificar", "Modificar", new { codRegion = DataBinder.Eval(tc.DataItem, "Cod_Region"), IdPais = ViewBag.IdPais }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { codRegion = DataBinder.Eval(tc.DataItem, "Cod_Region"), IdPais = ViewBag.IdPais },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -68,7 +68,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdPais = ViewBag.IdPais }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -86,6 +86,20 @@
             column.FieldName = "estado";
             column.Caption = "Estado";
             column.ColumnType = MVCxGridViewColumnType.CheckBox;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "Provincia";
+            column.Width = Unit.Pixel(100);
+            column.SetDataItemTemplateContent(container =>
+            {
+                Html.DevExpress().HyperLink(hyperlink =>
+                {
+                    var keyValue = DataBinder.Eval(container.DataItem, "IdPais");
+                    hyperlink.Properties.Text = "Provincias";
+                    hyperlink.NavigateUrl = Url.Action("Index", "Provincia", new { IdPais = keyValue });
+                }).Render();
+            });
         });
     });
 }
