--- a/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Ciudad/Index.cshtml
@@ -11,6 +11,10 @@
 @using (Html.BeginForm())
 {
 
-    @Html.Action("GridViewPartial_ciudad")
+    @Html.Action("GridViewPartial_ciudad", new { IdProvincia = ViewBag.IdProvincia })
+
+    <div class="box-footer">
+        <a class="btn btn-default" href="@Url.Action("Index","Provincia",new { IdProvincia = ViewBag.IdProvincia, Area = "General" },null)">Volver</a>
+    </div>
 
 }
