--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/_GridViewPartial_grupo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Grupo/_GridViewPartial_grupo.cshtml
@@ -82,7 +82,7 @@
         settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(20);
         settings.Columns.Add(column =>
         {
-            column.Caption = "Grupo";
+            column.Caption = "Subgrupo";
             column.Width = Unit.Pixel(120);
             column.SetDataItemTemplateContent(container =>
             {
