--- a/ERP/Core.Erp.Web/Areas/General/Views/Provincia/_GridViewPartial_provincia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Provincia/_GridViewPartial_provincia.cshtml
@@ -59,8 +59,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdProvincia = DataBinder.Eval(tc.DataItem, "IdProvincia"), IdPais = ViewBag.IdPais }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdProvincia = DataBinder.Eval(tc.DataItem, "IdProvincia"), IdPais = ViewBag.IdPais },
+                Html.ActionLink("Modificar", "Modificar", new { IdPais = DataBinder.Eval(tc.DataItem, "IdPais"), IdProvincia = DataBinder.Eval(tc.DataItem, "IdProvincia") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdPais = DataBinder.Eval(tc.DataItem, "IdPais"), IdProvincia = DataBinder.Eval(tc.DataItem, "IdProvincia") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
