--- a/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Parroquia/Modificar.cshtml
@@ -68,7 +68,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Parroquia",new { Area = "General" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Parroquia",new {IdCiudad_Canton = Model.IdCiudad_Canton, Area = "General" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
