--- a/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Modificar.cshtml
@@ -11,6 +11,8 @@
 @using (Html.BeginForm("Modificar", "Provincia", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdProvincia)
+    @Html.HiddenFor(q => q.IdPais)
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -61,7 +63,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Provincia", new {IdPais = Model.IdPais, Area = "General" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Provincia", new {IdPais = ViewBag.IdPais, Area = "General" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
