--- a/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Provincia/Nuevo.cshtml
@@ -10,13 +10,23 @@
 
 @using (Html.BeginForm("Nuevo","Provincia",FormMethod.Post, new { @class = "form", @role = "form"}))
 {
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
+
+    @Html.HiddenFor(q=>q.IdPais)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="Cod_Provincia">Código*</label>
-                    @Html.TextBoxFor(q=>q.Cod_Provincia, new { @class = "form-control"})
-                    @Html.ValidationMessageFor(q=>q.Cod_Provincia, "", new { @class = "text-danger"})
+                    <label for="IdProvincia">Código*</label>
+                    @Html.TextBoxFor(q=>q.IdProvincia, new { @class = "form-control"})
+                    @Html.ValidationMessageFor(q=>q.IdProvincia, "", new { @class = "text-danger"})
                 </div>
             </div>
         </div>
@@ -60,7 +70,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Provincia", new {IdPais = Model.IdPais, Area = "General" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Provincia", new {IdPais = ViewBag.IdPais, Area = "General" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
