--- a/ERP/Core.Erp.Web/Areas/General/Views/Region/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Region/Nuevo.cshtml
@@ -10,6 +10,7 @@
 
 @using (Html.BeginForm("Nuevo", "Region", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q=>q.IdPais)
 <div class="row">
     <div class="col-md-12">
         <div class="col-md-12">
